[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/player/Enemy.gd" type="Script" id=1]

[sub_resource type="SpatialMaterial" id=13]
albedo_color = Color( 0.0235294, 0.0509804, 0.392157, 1 )

[sub_resource type="CapsuleMesh" id=7]
material = SubResource( 13 )
radius = 0.5

[sub_resource type="CapsuleShape" id=8]
radius = 0.5

[sub_resource type="SphereShape" id=9]
margin = 0.7
radius = 0.37

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.878431, 0.619608, 0.619608, 1 )

[sub_resource type="SphereMesh" id=10]
material = SubResource( 6 )
radius = 0.3
height = 0.7

[sub_resource type="Animation" id=11]
resource_name = "Death"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, -90 ) ]
}

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0.0212784, 0.0884049, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, -90 ) ]
}

[sub_resource type="SphereShape" id=14]
radius = 10.0

[node name="Enemy" type="KinematicBody" groups=["Enemy"]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
script = ExtResource( 1 )

[node name="Body" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
mesh = SubResource( 7 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 8 )

[node name="HeadShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.35349, 0 )
shape = SubResource( 9 )

[node name="Head" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.33068, 0 )
mesh = SubResource( 10 )
skeleton = NodePath("")
material/0 = null

[node name="Animation" type="AnimationPlayer" parent="."]
reset_on_save = false
anims/Death = SubResource( 11 )
anims/RESET = SubResource( 12 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="ViewField" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="ViewField"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.375893, 0 )
shape = SubResource( 14 )

[node name="ActionTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="body_entered" from="ViewField" to="." method="_on_ViewField_body_entered"]
[connection signal="body_exited" from="ViewField" to="." method="_on_ViewField_body_exited"]
[connection signal="timeout" from="ActionTimer" to="." method="_on_ActionTimer_timeout"]
